--- a/LucasVanBerkel-pset1/app/src/main/res/layout/main.xml
+++ b/LucasVanBerkel-pset1/app/src/main/res/layout/main.xml
@@ -11,8 +11,9 @@
     tools:context="com.example.lucas.lucasvanberkel_pset1.MainActivity">
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="300dp"
+        android:layout_centerHorizontal="true"
         android:id="@+id/pics">
 
 
@@ -118,7 +119,7 @@
                 android:layout_height="wrap_content"
                 android:button="@null"
                 android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
-                android:layout_gravity="right"/>
+                android:layout_gravity="end"/>
         </TableRow>
 
         <TableRow
@@ -137,7 +138,7 @@
                 android:layout_height="wrap_content"
                 android:button="@null"
                 android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
-                android:layout_gravity="right"/>
+                android:layout_gravity="end"/>
         </TableRow>
 
         <TableRow
@@ -156,7 +157,7 @@
                 android:layout_height="wrap_content"
                 android:button="@null"
                 android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
-                android:layout_gravity="right"/>
+                android:layout_gravity="end"/>
         </TableRow>
 
         <TableRow
@@ -175,7 +176,7 @@
                 android:layout_height="wrap_content"
                 android:button="@null"
                 android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
-                android:layout_gravity="right"/>
+                android:layout_gravity="end"/>
         </TableRow>
 
         <TableRow
@@ -194,7 +195,7 @@
                 android:layout_height="wrap_content"
                 android:button="@null"
                 android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
-                android:layout_gravity="right"/>
+                android:layout_gravity="end"/>
         </TableRow>
 
         <TableRow
