--- a/LucasVanBerkel-pset3/app/src/main/res/layout/activity_start_screen.xml
+++ b/LucasVanBerkel-pset3/app/src/main/res/layout/activity_start_screen.xml
@@ -34,8 +34,8 @@
         android:onClick="startSearch"/>
 
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
         android:layout_below="@+id/startSearchButton"
         android:visibility="invisible"
         android:id="@+id/searchBar"
@@ -44,10 +44,13 @@
 
     <Button
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/searchBar"
+        android:layout_height="40dp"
+        android:layout_toRightOf="@+id/searchBar"
+        android:layout_toEndOf="@+id/searchBar"
+        android:layout_below="@id/startSearchButton"
         android:visibility="invisible"
         android:layout_centerHorizontal="true"
+        android:layout_margin="10dp"
         android:text="@string/searchButton"
         android:id="@+id/searchButton"
         android:onClick="search"/>
