--- a/LucasVanBerkel-pset3/app/src/main/res/layout/list_item.xml
+++ b/LucasVanBerkel-pset3/app/src/main/res/layout/list_item.xml
@@ -1,10 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--  Single List Item Design -->
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/textview"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:padding="10dip"
-    android:textSize="16sp"
-    android:textStyle="bold" >
-</TextView>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:src="@drawable/bourne_legacy"/>
+    <TextView
+        android:id="@+id/movieTitleSearch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Name"/>
+</LinearLayout>
