--- a/LucasVanBerkel-pset3/app/src/main/res/layout/list_item.xml
+++ b/LucasVanBerkel-pset3/app/src/main/res/layout/list_item.xml
@@ -1,14 +1,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="50dp"
-        android:src="@drawable/bourne_legacy"/>
+    android:layout_height="100dp"
+    android:orientation="horizontal"
+    android:gravity="top">
     <TextView
         android:id="@+id/movieTitleSearch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Name"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="20dp"/>
 </LinearLayout>
