--- a/LucasVanBerkel-pset6/app/src/main/res/layout/activity_search.xml
+++ b/LucasVanBerkel-pset6/app/src/main/res/layout/activity_search.xml
@@ -22,7 +22,15 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main"/>
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
+
+    <include layout="@layout/content_search"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
