--- a/LucasVanBerkel-pset6/app/src/main/res/menu/menu_main.xml
+++ b/LucasVanBerkel-pset6/app/src/main/res/menu/menu_main.xml
@@ -12,6 +12,13 @@
         app:showAsAction="ifRoom|collapseActionView" />
 
     <item
+        android:id="@+id/action_refresh"
+        android:icon="@drawable/ic_refresh_white_48dp"
+        android:orderInCategory="99"
+        android:title="@string/action_refresh"
+        app:showAsAction="always"/>
+
+    <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="99"
