--- a/LucasVanBerkel-pset6/app/src/main/res/layout/activity_login.xml
+++ b/LucasVanBerkel-pset6/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.lucas.lucasvanberkel_pset6.SettingsActivity">
+    tools:context="com.example.lucas.lucasvanberkel_pset6.LogInActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_settings" />
+    <include layout="@layout/content_login" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
